# mfxparser

./: .gitignore  Example.hs  LICENSE  MfxParser.cabal  README.md
src/MixFix/: Dic.hs  Expr.hs  Lexer.hs  Parser.hs
src/Proof/: Expr.hs  Match.hs
